--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "accept-language-parser": "^1.5.0",
     "dotenv-load": "^2.0.0",
     "gsap": "^2.1.3",
     "isomorphic-unfetch": "^3.0.0",
@@ -26,6 +27,7 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
+    "@types/accept-language-parser": "^1.5.1",
     "@types/gsap": "^1.20.2",
     "@types/next": "^8.0.6",
     "@types/node": "12.0.12",
@@ -53,7 +55,7 @@
   },
   "license": "ISC",
   "husky": {
-    "pre-commit": "yarn pretty",
+    "pre-commit": "yarn pretty && yarn build:css",
     "pre-push": "yarn lint"
   }
 }
