--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "build:css": "postcss styles/*.css styles/**/*.css --dir static/"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.1",
     "@zeit/next-css": "^1.0.1",
     "accept-language-parser": "^1.5.0",
     "dotenv-load": "^2.0.0",
+    "fs-extra": "^8.1.0",
     "gsap": "^2.1.3",
     "isomorphic-unfetch": "^3.0.0",
     "next": "latest",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@types/accept-language-parser": "^1.5.1",
+    "@types/fs-extra": "^8.0.1",
     "@types/gsap": "^1.20.2",
     "@types/next": "^8.0.6",
     "@types/node": "12.0.12",
