--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.10.0",
-    "react-tsparticles": "^1.15.1",
+    "react-particles-js": "^3.2.1",
     "styled-components": "^5.0.0",
     "use-dark-mode": "^2.3.1"
   },
@@ -24,7 +24,7 @@
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "5.0.1",
     "babel-plugin-styled-components": "^1.10.0",
-    "typescript": "3.5.2"
+    "typescript": "^3.9.3"
   },
   "license": "ISC"
 }
