--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,5 +5,12 @@
   "background_color": "#fafafa",
   "display": "standalone",
   "scope": "/",
-  "start_url": "/"
+  "start_url": "/",
+  "icons": [
+    {
+      "src": "/icon.png",
+      "type": "image/png",
+      "sizes": "1024x1024"
+    }
+  ]
 }
